# masjid-app

./: .gitignore  README.md  RELEASE.md
.github/workflows/: build-apk.yml  deploy-backend.yml
backend/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  seed_all.py  seed_jamaah.py  seed_jamaah2.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: auth.py  events.py  finance.py  jamaah.py  setting.py  upload.py  user_access.py  whatsapp.py  ziswaf.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  event.py  finance.py  jamaah.py  message_queue.py  setting.py  user.py  ziswaf.py
backend/app/schemas/: access_user.py  finance.py  jamaah.py  user.py  ziswaf.py
backend/app/services/: cache.py  cache_worker.py  r2.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
frontend/public/: offline.html
frontend/public/.well-known/: assetlinks.json
frontend/src/: App.jsx  index.css
frontend/src/components/: EventModal.jsx  FinanceModal.jsx  JamaahModal.jsx  Layout.jsx  WhatsAppSendForm.jsx  WhatsAppSendModal.jsx  ZakatFitrahModal.jsx  ZakatFitrahTab.jsx  ZiswafModal.jsx
frontend/src/pages/: AccessDenied.jsx  Dashboard.jsx  Events.jsx  Finance.jsx  Jamaah.jsx  Login.jsx  PesanKirim.jsx  Setting.jsx  Ziswaf.jsx
frontend/src/services/: api.js
frontend/src/stores/: useAuthStore.js
frontend/src/utils/: jamaahCache.js
